# transaction_reconciliation_api

./: .env.example  .gitignore  LICENCE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  main 2.py  main.py  models.py  schemas.py  services.py
app/api/: endpoints.py
assistant/: agent.py  audit.py  config.py  examples.py  router.py  schemas.py
data/: README.md  sample_transactions.csv  sample_transactions.json  seed_data.py
mcp_server/: README.md  audit.py  config.py  policies.py  server.py
scripts/: run_mcp.sh
tests/: conftest.py  test_reconciliation.py
